static/css/rule.css
#rule-view {
  position: absolute;
  color: white;
  font-family: 'Open Sans', sans-serif;
}

#rule-view.hidden {
  display: none;
}

#rule-view.selected {
  display: flex;
  flex-direction: column;
}

#rule-view > .title-bar {
  width: 100%;
  height: 9.6rem;
  padding-left: 9.6rem;
  display: flex;
  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
  z-index: 10;
  background: #46769C;
}

.rule-back-button {
  border: 0;
  background: #4a4a4a;
  color: white;
  width: 12rem;
  height: 12rem;
}

.rule-back-button:active {
  background: #222;
}

.rule-back-button > img {
  margin: 4rem;
  padding: 0;
}

#delete-button {
  background: none;
  border: 0;
  width: 12rem;
  height: 12rem;
}

#delete-button:active {
  background: #777;
}

#rule-view .rule-info {
  padding: 0;
  flex: 1;
}

#rule-view .rule-info h1 {
  margin: 0;
  margin-top: 2rem;
  font-size: 1.6rem;
  font-family: 'Open Sans', sans-serif;
  font-weight: normal;
  color: white;
}

.rule-name-customize {
  width: 0.7em;
  height: 0.7em;
  padding: 0.2em 0.4em;
  padding-bottom: 0;
  cursor: pointer;
}

#rule-view .rule-info > p {
  font-size: 1.6rem;
  margin-top: 0.8rem;
  color: #DAE3EB;
}

#rule-area {
  position: relative;
  background: url(/images/background.png);
  flex: 1;
}

#rule-area.drag-location-hint > #drag-hint {
  display: flex;
}

#drag-hint, #onboarding-hint {
  display: flex;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 5;
}

#drag-hint {
  display: none;
}

.drag-hint {
  flex: 1;
  position: relative;
}

.drag-hint-trigger {
  background: rgba(129, 184, 225, 0.3);
}

.drag-hint-effect {
  background: rgba(255, 207, 138, 0.3);
}

.drag-hint.inactive {
  background: rgba(127, 127, 127, 0.3);
}

.drag-hint.inactive > .drag-hint-container {
  display: none;
}

.drag-hint-block.device-block {
  background: none;
  border: 1px dashed black;
  text-align: center;
  line-height: 10rem;
  font-size: 2.4rem;
  margin: 1.4rem auto;
}

#devices-list {
  box-shadow: 0 -1px 3px rgba(0,0,0,0.12), 0 -1px 2px rgba(0,0,0,0.24);
  z-index: 10;
  background: #5A9AC9;
  position: relative;
}

#devices-list p {
  padding-left: 1.4rem;
}

#devices-list .device-block {
  display: block;
}

.device {
  display: inline-block;
  vertical-align: bottom;
}

.device-property-block {
  position: absolute;
  font-size: 0;
}

.device-property-block > .device-block {
  margin: 0;
  border-radius: 1rem 0 0 1rem;
}

.device-property-info {
  width: 20rem;
  background: white;
  border-radius: 0 1rem 0 0;
  display: inline-block;
  vertical-align: bottom;
}

.device-name {
  color: #4a4a4a;
  font-family: 'Open Sans', sans-serif;
  font-weight: normal;
  margin: 0 2rem;
  height: 5rem;
  line-height: 5rem;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

.property-select-option {
  background: #4a4a4a;
  height: 5rem;
  line-height: 5rem;
  color: white;
  padding: 0 2rem;
  width: 100%;
  box-sizing: border-box;
  font-size: 1.6rem;
  display: none;
  cursor: pointer;
}

.property-select-option.selected {
  display: block;
  position: relative;
  border-radius: 0 0 1rem 0;
}

.property-select-option.selected:after {
  content: "";
  position: absolute;
  right: 0;
  width: 0;
  height: 0;
  border-bottom: 1rem solid white;
  border-right: 1rem solid transparent;
  border-left: 1rem solid transparent;
  transform: translate(0.1rem, 3.5rem) rotate(135deg);
}

.property-select.open > .property-select-option.selected:after {
  display: none;
}

.property-select.open > .property-select-option {
  display: block;
}

.property-select-option:hover {
  background: #9b9b9b;
}

.dragging {
  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
  z-index: 20;
}

#delete-area.delete-active {
  display: block;
}

#delete-area {
  display: none;
  position: absolute;
  width: 100%;
  height: 100%;
  background: white;
  box-sizing: border-box;
  margin: 0;
  padding: 2rem;
}

.delete-container {
  margin: 0;
  padding: 0;
  width: 100%;
  height: 100%;
  text-align: center;
  border: 1px dashed black;
  box-sizing: border-box;
}

.delete-prompt, .drag-hint-container {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  padding: 0;
  margin: 0;
}

#rule-delete-overlay {
  display: none;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 30;
  background: rgba(64, 64, 64, 0.8);
}

#rule-view .rule-delete-dialog {
  display: block;
  width: 48rem;
}

#rule-view .rule-delete-dialog > p {
  font-size: 2rem;
}

#rule-delete-overlay.active {
  display: block;
}

#connection {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

#connection.hidden {
  display: none;
}

#connection > path {
  stroke: #305067;
  stroke-width: 0.5rem;
  fill: none;
}

#connection > circle {
  stroke: white;
  stroke-width: 0.2rem;
  fill: #305067;
}

#onboarding-hint h2 {
  color: #4a4a4a;
  font-weight: normal;
  font-style: italic;
}

#onboarding-hint.hidden {
  display: none;
}

